plugins/kotlin/idea/tests/testData/multiplatform/diamondDuplicateActuals/left/left.kt
package sample

actual class <!LINE_MARKER("descr='Has expects in top module'")!>A<!> /* Left */ {
    actual fun <!LINE_MARKER("descr='Has expects in top module'")!>foo<!>(): Int = 42
    fun fromLeft(): String = ""
}
